infra/kubernetes/istio/authorization-policies/default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: blobe
spec: {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-same-namespace
  namespace: blobe
spec:
  rules:
    - from:
        - source:
            namespaces: ["blobe"]
